docs/7.53/md/abennews-640-objects.md
  

* * *

AS ABAP Release 753, ©Copyright 2019 SAP AG. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abennews.htm) →  [Changes in Releases 6.xx](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abennews-6.htm) →  [Changes in Release 6.40](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abennews-640.htm) → 

ABAP Objects in Release 6.40

[1\. Data types and constants in the public visibility section](#!ABAP_MODIFICATION_1@1@)
[
2\. Access to static components for object types of global classes](#!ABAP_MODIFICATION_2@2@)
[
3\. Use of alias names](#!ABAP_MODIFICATION_3@3@)
[
4\. Unused private components](#!ABAP_MODIFICATION_4@4@)

Modification 1

Data Types and Constants in the Visibility Section of Global Classes

From Release 6.40, data types and constants can be created in the public [visibility section](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenvisibility_section_glosry.htm "Glossary Entry") of global classes and interfaces, which was not previously possible. Classes and interfaces therefore make the use of [type groups](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abentype_group_1_glosry.htm "Glossary Entry") superfluous, whereas for types and constants names that are longer than the names in the type groups are possible.

Modification 2

Access to Static Components of Object Types

The statements [CLASS cl DEFINITION LOAD](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abapclass_deferred.htm) and [INTERFACE in LOAD](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abapinterface_deferred.htm) are now only necessary if source code contains recursive accesses to global classes or interfaces. Until now, these statements always had to be specified if [static components](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenstatic_component_glosry.htm "Glossary Entry") of global classes or interfaces were being accessed for the first time. Transaction SYNT, to which a trace for these object types has been added, can be used to detect recursive class and interface definitions.

Note

This change was also transported back to Release 6.20.

Modification 3

Use of Alias Names

From Release 6.40, it is possible to specify the alias names of the methods defined using [ALIASES](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abapaliases.htm) in the implementation of methods using the statement METHOD and in the [redefinition](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenredefinition_glosry.htm "Glossary Entry") of methods using the statement METHODS ...REDEFINITION. At the same time, however, from Release 6.40 there will be a warning about the syntax check if identical components are accessed within a class declaration or a method with different names.

Modification 4

Unused Private Components

From Release 6.40, all unused private components of a class produce a warning in the extended program check. Private methods must be called and private events must be both raised and handled.